feat: implement query validator with error accumulation and typed value conversion
Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>